buildpacks/dotnet/src/snapshots/load_app_source_project_xml_parse_directory_build_props_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - XML parsing error

[0;31m! Error parsing `Directory.Build.props`[0m
[0;31m![0m
[0;31m! We can’t parse the `Directory.Build.props` file’s XML content. Parsing errors[0m
[0;31m! usually indicate an error in the file.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build.[0m
[0;31m![0m
[0;31m! For more information, see:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet#net-version[0m
