buildpacks/dotnet/src/snapshots/load_app_source_solution_load_project_missing_target_framework_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---

[0;31m! Missing target framework configuration[0m
[0;31m![0m
[0;31m! The project `foo.csproj` is missing `TargetFramework` configuration.[0m
[0;31m![0m
[0;31m! The `TargetFramework` property must be set either:[0m
[0;31m! * In the project file itself[0m
[0;31m! * In a `Directory.Build.props` file in the project directory or any parent directory[0m
[0;31m![0m
[0;31m! For more information, see:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet#net-version[0m
