buildpacks/dotnet/src/snapshots/load_project_file_xml_parse_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - XML parsing error

[0;31m! Error parsing the project file[0m
[0;31m![0m
[0;31m! We can’t parse the project file’s XML content. Parsing errors usually[0m
[0;31m! indicate an error in the project file.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build.[0m
